Consolida API do metodo do alavanque
